feat: Shopping Cart and Order integration